<resources>

    <!--Integers-->
    <integer name="secSplash">2000</integer>
    <integer name="uno">1</integer>
    <!--Strings-->
    <string name="GB" translatable="false">GB</string>
    <string name="app_name">Proyecto_2</string>
    <string name="bienvenida">Bienvenido :)</string>
    <string name="home" translatable="false">HOME</string>
    <string name="toastID" translatable="false">ID: </string>
    <string name="celulares" translatable="false">celulares</string>
    <string name="saved">Producto guardado</string>
    <!--Formulario-->
    <string name="registros">Registros</string>
    <string name="registrar">Registrar</string>
    <string name="informacion">Informacion</string>
    <string name="modelo">Modelo</string>
    <string name="marca">Marca</string>
    <string name="rom">Memoria Interna</string>
    <string name="ram">Memoria RAM</string>
    <string name="so">Sistema Operativo</string>

    <!--Marcas-->
    <string name="Xiaomi">Xiaomi</string>
    <string name="Apple">Nokia</string>
    <string name="Samsung">Samsung</string>
    <string name="Huawei">Huawei</string>
    <string name="HTC">HTC</string>
    <string name="Motorola">Motorola</string>

    <!--Sistemas operativos-->
    <string name="once">11.0</string>
    <string name="diez">10.0</string>
    <string name="pie">Pie 9.0</string>
    <string name="oreo">Oreo 8.0</string>
    <string name="nougat">Nougat 7.0</string>
    <string name="marsh">Marshmallow 6.0</string>
    <string name="lollipop">Lollipop 5.0</string>

    <!--Errores-->
    <string name="errModel">Por favor ingresa el nombre del modelo</string>
    <string name="errBrand">Por favor selecciona alguna marca</string>
    <string name="errRom">Por favor ingresa la capacidad interna del dispositivo</string>
    <string name="errRam">Por favor ingresa la capacidad de la memoria RAM</string>
    <string name="valRom">Por favor digita una capacidad de 32,64,128,256 o 512 GB</string>
    <string name="valRam">Por favor digita una capacidad de 2,3,4,6,8 o 12 GB</string>
    <string name="errSO">Por favor selecciona un sistema operativo</string>
    <string name="errGral">Por favor llena los campos faltantes</string>
    <string name="noObject">No se han insertado elementos</string>

    <!--Limitantes-->
    <integer name="cero" translatable="false">0</integer>
    <string name="vacio" translatable="false">""</string>

</resources>